cmake_minimum_required(VERSION 4.0)
project(Projeto_POO)

set(CMAKE_CXX_STANDARD 17)

add_executable(Projeto_POO src/main.cpp
        src/Core/Simulador.cpp
        include/Core/Simulador.h
        src/Core/Jardim.cpp
        include/Core/Jardim.h
        src/Core/Posicao.cpp
        include/Core/Posicao.h
        include/Core/Settings.h
        src/Entidades/Jardineiro.cpp
        include/Entidades/Jardineiro.h
        src/Entidades/Planta.cpp
        include/Entidades/Planta.h
        src/Entidades/Cacto.cpp
        include/Entidades/Cacto.h
        src/Entidades/Roseira.cpp
        include/Entidades/Roseira.h
        src/Entidades/ErvaDaninha.cpp
        include/Entidades/ErvaDaninha.h
        src/Entidades/PlantaExotica.cpp
        include/Entidades/PlantaExotica.h
        src/Items/Regador.cpp
        include/Items/Regador.h
        src/Items/Adubo.cpp
        include/Items/Adubo.h
        src/Items/Tesoura.cpp
        include/Items/Tesoura.h
        src/Items/FerramentaZ.cpp
        include/Items/FerramentaZ.h
        src/Comandos/Avanca.cpp
        include/Comandos/Avanca.h
        src/Comandos/LPlantas.cpp
        include/Comandos/LPlantas.h
        src/Comandos/LPlanta.cpp
        include/Comandos/LPlanta.h
        src/Comandos/LArea.cpp
        include/Comandos/LArea.h
        src/Comandos/LSolo.cpp
        include/Comandos/LSolo.h
        src/Comandos/LFerr.cpp
        include/Comandos/LFerr.h
        src/Comandos/Colhe.cpp
        include/Comandos/Colhe.h
        src/Comandos/PlantaCmd.cpp
        include/Comandos/PlantaCmd.h
        src/Comandos/Larga.cpp
        include/Comandos/Larga.h
        src/Comandos/Pega.cpp
        include/Comandos/Pega.h
        src/Comandos/Compra.cpp
        include/Comandos/Compra.h
        src/Comandos/Move.cpp
        include/Comandos/Move.h
        src/Comandos/Entra.cpp
        include/Comandos/Entra.h
        src/Comandos/Sai.cpp
        include/Comandos/Sai.h
        src/Comandos/JardimCmd.cpp
        include/Comandos/JardimCmd.h
        src/Comandos/Grava.cpp
        include/Comandos/Grava.h
        src/Comandos/Recupera.cpp
        include/Comandos/Recupera.h
        src/Comandos/Apaga.cpp
        include/Comandos/Apaga.h
        src/Comandos/Executa.cpp
        include/Comandos/Executa.h
        include/Items/Ferramenta.h
        include/Comandos/Comando.h
        src/Items/Ferramenta.cpp)
